--- a/composer.json
+++ b/composer.json
@@ -15,23 +15,23 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "jeremykendall/php-domain-parser": "^6.3",
         "psr/simple-cache": "^1.0 || ^3.0",
-        "symfony/cache": "^6.3 || ^7.0"
+        "symfony/cache": "^7.4 || ^8.0"
     },
     "require-dev": {
-        "matthiasnoback/symfony-dependency-injection-test": "^4.3",
-        "nyholm/symfony-bundle-test": "^2.0",
-        "phpunit/phpunit": "^9.6.13",
+        "matthiasnoback/symfony-dependency-injection-test": "^5.1 || ^6.2",
+        "nyholm/symfony-bundle-test": "^2.0 || ^3.1",
+        "phpunit/phpunit": "^10.0",
         "rollerscapes/standards": "^1.0",
-        "symfony/console": "^6.3",
-        "symfony/framework-bundle": "^6.3 || ^7.0",
-        "symfony/http-client": "^6.3 || ^7.0",
-        "symfony/phpunit-bridge": "^6.3 || ^7.0"
+        "symfony/console": "^7.4 || ^8.0",
+        "symfony/framework-bundle": "^7.4 || ^8.0",
+        "symfony/http-client": "^7.4 || ^8.0",
+        "symfony/phpunit-bridge": "^7.4 || ^8.0"
     },
     "conflict": {
-        "symfony/framework-bundle": "<6.0"
+        "symfony/framework-bundle": "<7.4"
     },
     "suggest": {
         "rollerworks/pdb-validator": "PHP domain-parser Constraints for Symfony Validator component"
