--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,13 @@
     "require-dev": {
         "matthiasnoback/symfony-dependency-injection-test": "^5.1 || ^6.2",
         "nyholm/symfony-bundle-test": "^2.0 || ^3.1",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.0 || ^11.5 || ^12.5 || ^13.0",
         "rollerscapes/standards": "^1.0",
         "symfony/console": "^7.4 || ^8.0",
         "symfony/framework-bundle": "^7.4 || ^8.0",
         "symfony/http-client": "^7.4 || ^8.0",
-        "symfony/phpunit-bridge": "^7.4 || ^8.0"
+        "symfony/phpunit-bridge": "^7.4 || ^8.0",
+        "symfony/polyfill-php85": "^1.33"
     },
     "conflict": {
         "symfony/framework-bundle": "<7.4"
